<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:text="@string/beginning_c_game_progamming"
        android:textSize="24sp"
        tools:text="Beginning C++ Game Progamming" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/cover_for_java_by_building_android_games"
        app:srcCompat="@drawable/image_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:text="@string/learn_c_game_programming_from_scratch"
        android:textSize="16sp"
        tools:text="Learn C++ game programming from scratch" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:text="@string/BUYNOW"
        android:textColor="#2196F3"
        android:textSize="24sp"
        tools:text="BUY NOW" />
</android.widget.LinearLayout>